# SaaS_Joola_pulse_backend

./: .commit-msg.tmp  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_scrape_bg.ps1  scrape_ig_latest.py  scrape_now.py  scrape_tiktok_athletes.py  scrape_x_athletes.py  scrape_x_latest.py  selftest_brief_overrides_signal.py  selftest_topics.py  test_content.py
app/: config.py  db.py  main.py  orchestrator.py
app/agents/: __init__.py  crawl.py  entities.py  issues.py  keywords.py  news_scraper.py  single_url.py
app/content/: __init__.py  critic.py  generator.py  parsers.py  prompt_builder.py  rate_limiter.py  signal_collectors.py  types.py
app/models/: schemas.py
app/routes/: analyze.py  content.py  exports.py  news.py  performance.py  results.py  runs.py
app/services/: crawler.py  dataforseo.py  discovery.py  event_bus.py  llm.py  page_classifier.py  parser.py  playwright_fetcher.py  storage.py
qa/: README.md  regression.ps1
recovery/: README.md  RECOVERY-RUNBOOK.md  code-architecture.md  domain-dns.md  env.template  github-repos.md  railway-setup.md  secrets-checklist.md
recovery/database/: schema-overview.md  seed-data.md
recovery/scrapers/: README.md  ai-enrichment-pipeline.md  instagram-scraper.md  reddit-scraper.md  tiktok-scraper.md  x-twitter-scraper.md  youtube-scraper.md
scripts/: reset_db.py  run_scrape_bg.ps1  test_dataforseo.py
scripts/scrapers/: scrape_ig.py  scrape_ig_full.py  scrape_news.py  scrape_tiktok_comments.py  scrape_x_replies.py
supabase/migrations/: 001_init.sql  _reset_data.sql  (+6 more)
tests/: conftest.py
(+9 files in other folders)
