[project]
name = "seo-intel-backend"
version = "0.1.0"
description = "SEO Intelligence POC backend (FastAPI + Supabase)"
requires-python = ">=3.11"
dependencies = [
  # Web framework
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",

  # HTTP / crawling
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.3.0",
  "tldextract>=5.1.0",
  "urllib3>=2.2.0",
  "robotexclusionrulesparser>=1.7.1",

  # JS rendering fallback (install Playwright browsers separately)
  "playwright>=1.48.0",

  # Apify (optional, off by default via env flag)
  "apify-client>=1.8.0",

  # DB
  "supabase>=2.9.0",
  "psycopg[binary]>=3.2.0",

  # LLM
  "openai>=1.54.0",

  # Utils
  "python-dotenv>=1.0.1",
  "rapidfuzz>=3.10.0",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",

  # Reports
  "openpyxl>=3.1.0",

  # Google integrations (GSC / GA4 — optional, gracefully skipped if not configured)
  "google-auth>=2.37.0",
  "google-auth-oauthlib>=1.2.0",
  "google-api-python-client>=2.154.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "live: hits a running uvicorn at localhost:8000 — auto-skipped when offline",
]
